--- a/index.html
+++ b/index.html
@@ -159,16 +159,17 @@
             </div>
             <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard" target="_blank">Національна служба здоровʼя України</a></div>
 
-       <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Інформація про кількість хворих медиків у розрізі лікарень відсутня в публічному доступі. Її наявність допомогла б скооординувати зусилля громадськості та волонтерів на забезпечення необхідними засобами захисту медзакладів, що найбільше цього потребують. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто зазначені з привʼязкою до області, а не до лікарні. Тому на разі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік показує дані по днях і у відсотках від загальної кількості хворих.</p>
+       <p style="grid-column: 1/-1; text-align: left;">Інформація про кількість хворих медиків у розрізі лікарень відсутня в публічному доступі. Її наявність допомогла б скооординувати зусилля громадськості та волонтерів на забезпечення необхідними засобами захисту медзакладів, що найбільше цього потребують. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто зазначені з привʼязкою до області, а не до лікарні. Тому на разі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік нижче показує дані по днях і у відсотках від загальної кількості хворих.</p>
+       <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Зверніть увагу, що деякі графіки починаються зі 100%. Це означає, що перші в області діагностовані випадки (один або більше) були серед медиків.  Так, 25 березня у Вінницькій області був виявлений перший випадок, це був медичний працівник і це єдиний зареєстрований випадок в цей день. Таким чином, кількість медичних працівників серед загальної кількості хворих становить 100%.</p>
        </div>
 
 
 
        <div id="medical-wrapper" style="grid-column:1/-1;">
-
-       <h3>Хворі на COVID-19 медики (графік інтерактивний, нижче кнопки-перемикачі) <br>
-           <span id="medical_percent" class="med-covid med-covid-active">% від кумулятивної к-ті хворих</span>
-           <span id="is_medical" class="med-covid" >к-ть по днях</span></h3>
+           <h3>Хворі на COVID-19 медики (графік інтерактивний, нижче кнопки-перемикачі) <br>
+               <span id="medical_percent" class="med-covid med-covid-active">% від кумулятивної к-ті хворих</span>
+               <span id="is_medical" class="med-covid" >к-ть по днях</span>
+           </h3>
 
            <div id="medical"></div>
 
