--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        <p><a href="#nav-1">Швидкість зростання хворих на covid-19 в Україні</a></p>
        <p><a href="#chart_wrapper">Хворі в Україні та інших країнах (порівняння)</a></p>
        <p><a href="#maps">Кількість осіб з підозрою, хворих і померлих у Україні по регіонах та лікарнях</a></p>
-       <p style="margin-bottom: 50px;"><a href="#medical">Хворі на COVID-19 медики</a> <b style="color:#ed6746;">нове! </b></p>
+       <p style="margin-bottom: 50px;"><a href="#nav-4">Хворі на COVID-19 медики</a> <b style="color:#ed6746;">нове! </b></p>
 
 
 
@@ -159,7 +159,7 @@
             </div>
             <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard" target="_blank">Національна служба здоровʼя України</a></div>
 
-       <p style="grid-column: 1/-1; text-align: left;">Інформація про кількість хворих медиків у розрізі лікарень відсутня в публічному доступі. Її наявність допомогла б скоординувати зусилля громадськості та волонтерів на забезпечення необхідними засобами захисту медзакладів, що найбільше цього потребують. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто, зазначені з привʼязкою до області, а не до лікарні. Тому наразі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік нижче показує дані по днях і у відсотках від загальної кількості хворих.</p>
+       <p id="nav-4" style="grid-column: 1/-1; text-align: left;">Інформація про кількість хворих медиків у розрізі лікарень відсутня в публічному доступі. Її наявність допомогла б скоординувати зусилля громадськості та волонтерів на забезпечення необхідними засобами захисту медзакладів, що найбільше цього потребують. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто, зазначені з привʼязкою до області, а не до лікарні. Тому наразі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік нижче показує дані по днях і у відсотках від загальної кількості хворих.</p>
        <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Зверніть увагу, що деякі графіки починаються зі 100%. Це означає, що перші в області діагностовані випадки (один або більше) були серед медиків.  Так, 25 березня у Вінницькій області був виявлений перший випадок, це був медичний працівник, і це єдиний зареєстрований випадок у цей день. Таким чином, кількість медичних працівників серед загальної кількості хворих становить 100%.</p>
        </div>
 
