додала графік по медикам

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
        <h3 id="nav-1" style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
        <!--<h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні продовжує зростати</h3>-->
-       <!--<p>Як видно з графіка, нахил лінії для України на останньому відрізку найбільше нагадує нахил, характерний для подвоєння щопʼять днів</p>-->
+       <p>Дивіться на нахил ліній, а не на сектори, які вони створюють на площині. Наприклад нахил траєкторії для України і Польщі зараз значно пологіший, ніж для лінії "5 днів", це означає, що і швидкість поширення менша.</p>
          <div id="charts">
              <div id="growth_speed">
                  <p class="source">Дані: <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">Johns Hopkins CSSE</a></p>
