--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
        <p><a href="#nav-1">Швидкість зростання хворих на covid-19 в Україні</a></p>
        <p><a href="#chart_wrapper">Хворі в Україні та інших країнах (порівняння)</a></p>
        <p><a href="#maps">Кількість осіб з підозрою, хворих і померлих у Україні по регіонах та лікарнях</a></p>
-       <p style="margin-bottom: 50px;"><a href="#nav-4">Хворі на COVID-19 медики</a> <b style="color:#ed6746;">нове! </b></p>
+       <p style="margin-bottom: 50px;"><a href="#nav-4">Хворі на COVID-19 медики</a> <b style="color:#ed6746;"></b></p>
 
 
        <p>Під час епідемій головною інформацією є не лише кількість хворих, а швидкість та прискорення, з якими вони з’являються. На жаль, більшість ЗМІ цього не розуміє і використовує сенсаційну форму подачі інформації на кшталт “новий рекорд кількості хворих...”.</p>
