--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
        <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
        <!--<p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>-->
-           <p><b>Цифри в наступних графіках і в попередніх можуть відрізнятись через різну швидкість оновлення даних в різних джерелах</b>. Наведіть на регіон або гексагон, щоб побачити інформацію по кількості.
+           <p><b>Цифри в наступних графіках і в попередніх можуть відрізнятись через різну швидкість оновлення даних в різних джерелах</b>. Наведіть на регіон або гексагон, щоб побачити інформацію по кількості.</p>
 
         <div id="maps">
             <h3>Кількість підозр на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
