--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 
        </div>
 
+<p style="margin: 50px auto">Проект здійснено за підтримки Фонду розвитку ЗМІ Посольства США в Україні. Погляди авторів не обов'язково збігаються з офіційною позицією уряду США.</p>
 
 
 
