оновила дані, змінилась структура даних

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="map" id="ch_suspected"></div>
             </div>
             <div>
-                <p>За координатами лікарні</p>
+                <p>За координатами населених пунктів</p>
                 <div class="map" id="hex_suspected"></div>
             </div>
 
@@ -137,8 +137,8 @@
                 <div class="map" id="ch_confirmed"></div>
             </div>
             <div>
-                <p>За координатами лікарні*</p>
-                <p style="font-size: 14px;">*хворі на самоізоляції привʼязані до координат обласного центру</p>
+                <p>За координатами населених пунктів</p>
+                <!--<p style="font-size: 14px;">*хворі на самоізоляції привʼязані до координат обласного центру</p>-->
 
                 <div class="map" id="hex_confirmed"></div>
             </div>
@@ -149,7 +149,7 @@
                 <div class="map" id="ch_died"></div>
             </div>
             <div>
-                <p>За координатами лікарні</p>
+                <p>За координатами населених пунктів</p>
                 <div class="map" id="hex_died"></div>
             </div>
             <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard" target="_blank">Національна служба здоровʼя України</a></div>
