--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
            <p><b>Цифри в наступних графіках і в попередніх можуть відрізнятись через різну швидкість оновлення даних в різних джерелах</b>. Наведіть на регіон або гексагон, щоб побачити інформацію по кількості.</p>
 
         <div id="maps">
-            <h3>Кількість підозр на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
-            <div>
-                <p>По областях</p>
-                <div class="map" id="ch_suspected"></div>
-            </div>
-            <div>
-                <p>За координатами населених пунктів</p>
-                <div class="map" id="hex_suspected"></div>
-            </div>
+            <!--<h3>Кількість підозр на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>-->
+            <!--<div>-->
+                <!--<p>По областях</p>-->
+                <!--<div class="map" id="ch_suspected"></div>-->
+            <!--</div>-->
+            <!--<div>-->
+                <!--<p>За координатами населених пунктів</p>-->
+                <!--<div class="map" id="hex_suspected"></div>-->
+            <!--</div>-->
 
             <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount"></span></h3>
             <div>
