повернула зниклий графік, поміняла шкалу для small multiples

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        <p><b>Навігація по матеріалу:</b></p>
        <p><a href="#nav-1">Швидкість зростання хворих на covid-19 в Україні</a></p>
        <p><a href="#chart_wrapper">Хворі в Україні та інших країнах (порівняння)</a></p>
-       <p><a href="#maps">Кількість осіб з підозрою, хворих і померлих у Україні по регіонах та лікарнях</a></p>
+       <p><a href="#maps">Кількість осіб, що захворіли/померли в Україні по регіонах та лікарнях</a></p>
        <p style="margin-bottom: 50px;"><a href="#nav-4">Хворі на COVID-19 медики</a> <b style="color:#ed6746;"></b></p>
 
 
