--- a/index.html
+++ b/index.html
@@ -134,23 +134,27 @@
             <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount"></span></h3>
             <div>
                 <p>По областях</p>
-                <div class="map" id="ch_confirmed"></div>
+                <div class="map" id="ch_confirmed"><img class="spinner" src="img/wait.gif" alt="завантаження..."/>
+                </div>
             </div>
             <div>
                 <p>За координатами населених пунктів</p>
                 <!--<p style="font-size: 14px;">*хворі на самоізоляції привʼязані до координат обласного центру</p>-->
 
-                <div class="map" id="hex_confirmed"></div>
+                <div class="map" id="hex_confirmed"><img class="spinner" src="img/wait.gif" alt="завантаження..."/>
+                </div>
             </div>
 
             <h3>Кількість смертей серед осіб з підтверженим covid-19. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="deaths_amount"></span></h3>
             <div>
                 <p>По областях</p>
-                <div class="map" id="ch_died"></div>
+                <div class="map" id="ch_died">
+                    <img class="spinner" src="img/wait.gif" alt="завантаження..."/>
+                </div>
             </div>
             <div>
                 <p>За координатами населених пунктів</p>
-                <div class="map" id="hex_died"></div>
+                <div class="map" id="hex_died"><img class="spinner" src="img/wait.gif" alt="завантаження..."/></div>
             </div>
             <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard" target="_blank">Національна служба здоровʼя України</a></div>
 
@@ -166,7 +170,9 @@
                <span id="is_medical" class="med-covid" >к-ть по днях</span>
            </h3>
 
-           <div id="medical"></div>
+           <div id="medical">
+               <img class="spinner" src="img/wait.gif" alt="завантаження..."/>
+           </div>
 
            <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard" target="_blank">Національна служба здоровʼя України</a></div>
 
