прибрала hex-карти, в них вже немає потреби

--- a/index.html
+++ b/index.html
@@ -133,29 +133,30 @@
 
             <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount"></span></h3>
             <div>
-                <p>По областях</p>
-                <div class="map" id="ch_confirmed"><img class="spinner" src="img/wait.gif" alt="завантаження..."/>
+                <!--<p>По областях</p>-->
+                <div class="map" id="ch_confirmed">
+                    <img class="spinner" src="img/wait.gif" alt="завантаження..."/>
                 </div>
             </div>
-            <div>
-                <p>За координатами населених пунктів</p>
-                <!--<p style="font-size: 14px;">*хворі на самоізоляції привʼязані до координат обласного центру</p>-->
+            <!--<div>-->
+                <!--&lt;!&ndash;<p>За координатами населених пунктів</p>&ndash;&gt;-->
+                <!--&lt;!&ndash;<p style="font-size: 14px;">*хворі на самоізоляції привʼязані до координат обласного центру</p>&ndash;&gt;-->
 
-                <div class="map" id="hex_confirmed"><img class="spinner" src="img/wait.gif" alt="завантаження..."/>
-                </div>
-            </div>
+                <!--&lt;!&ndash;<div class="map" id="hex_confirmed"><img class="spinner" src="img/wait.gif" alt="завантаження..."/>&ndash;&gt;-->
+                <!--</div>-->
+            <!--</div>-->
 
             <h3>Кількість смертей серед осіб з підтверженим covid-19. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="deaths_amount"></span></h3>
             <div>
-                <p>По областях</p>
+                <!--<p>По областях</p>-->
                 <div class="map" id="ch_died">
                     <img class="spinner" src="img/wait.gif" alt="завантаження..."/>
                 </div>
             </div>
-            <div>
-                <p>За координатами населених пунктів</p>
-                <div class="map" id="hex_died"><img class="spinner" src="img/wait.gif" alt="завантаження..."/></div>
-            </div>
+            <!--<div>-->
+                <!--<p>За координатами населених пунктів</p>-->
+                <!--&lt;!&ndash;<div class="map" id="hex_died"><img class="spinner" src="img/wait.gif" alt="завантаження..."/></div>&ndash;&gt;-->
+            <!--</div>-->
             <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard" target="_blank">Національна служба здоровʼя України</a></div>
 
        <p id="nav-4" style="grid-column: 1/-1; text-align: left;">Інформація про кількість хворих медиків у розрізі лікарень відсутня в публічному доступі. Її наявність допомогла б скоординувати зусилля громадськості та волонтерів на забезпечення необхідними засобами захисту медзакладів, що найбільше цього потребують. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто, зазначені з привʼязкою до області, а не до лікарні. Тому наразі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік нижче показує дані по днях і у відсотках від загальної кількості хворих.</p>
